# note_service

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
common/admin/: base.py
config/: settings.py  urls.py
notes/: admin.py  apps.py  filters.py  mixins.py  models.py  permissions.py  serializer.py  urls.py  validators.py  views.py
notes/migrations/: 0001_initial.py
